--- a/languages/es/strings.xml
+++ b/languages/es/strings.xml
@@ -111,7 +111,7 @@
     <string name="permission_camera_dlg_msg">Se requiere el permiso de uso de la cámara para la grabación de video y la vista previa de la cámara.</string>
     <string name="permission_camera_dlg_title">Resolución de la camara</string>
     <string name="permission_camera_request_canceled">Esta aplicación requiere permiso para usar la cámara para grabar videos pero fue rechazado. Cerrando… Intente otorgar permiso a la cámara en la configuración del sistema de esta aplicación</string>
-    <string name="permission_location_dlg_explanation_msg">Cuando se minimiza, Droid Dashcam usa datos en segundo plano de la ubicación para obtener coordenadas, dirección y velocidad para imprimirlos en el video grabado.</string>
+    <string name="permission_location_dlg_explanation_msg">La ubicación es necesaria para dibujar coordenadas, dirección y velocidad en el video grabado, o mostrar estos datos en la pantalla principal (dependiendo de su configuración).</string>
     <string name="permission_location_dlg_explanation_settings_msg">En Android 11 (R), debe seleccionar manualmente \"Todo el tiempo (cualquier modo)\" en las preferencias del sistema para permitir la ubicación en segundo plano. La configuración se abrirá después de esta ventana.</string>
     <string name="permission_location_dlg_msg">Se necesita el permiso de Ubicación para determinar, utilizando datos de GPS, la velocidad, dirección actual y coordenadas para mostrar en la pantalla e imprimirlos en video.</string>
     <string name="permission_location_dlg_title">Permiso de ubicación</string>
