--- a/languages/zh-rTW/strings.xml
+++ b/languages/zh-rTW/strings.xml
@@ -36,7 +36,7 @@
     <string name="dialog_report_the_error_text_btn">報告錯誤</string>
     <string name="dialog_select_camera_text">選擇鏡頭</string>
     <string name="dialog_unlock_video_text">是否要解除當前影片保留功能？</string>
-    <string name="disabled_text">殘障人士</string>
+    <string name="disabled_text">禁用</string>
     <string name="donate_dialog_item_no_ads_text">（無廣告）</string>
     <string name="donate_disable_ads_text">捐贈，刪除廣告</string>
     <string name="donate_success_thanks_msg_text">多謝您的支持！</string>
@@ -58,7 +58,7 @@
     <string name="donation_subscribtions_can_be_cancelled_any_time_text">訂閱可以隨時取消（「取消訂閱」按鈕將可用，您也可以在Google Play應用程式中取消）</string>
     <string name="format_altitude">高度</string>
     <string name="format_degrees">座標</string>
-    <string name="format_gb">技嘉</string>
+    <string name="format_gb">GiB</string>
     <string name="format_gps_speed">GPS速度</string>
     <string name="format_hz">赫茲</string>
     <string name="format_kbits">kbps</string>
