fix zh translation errors

--- a/languages/zh/strings.xml
+++ b/languages/zh/strings.xml
@@ -220,10 +220,10 @@
     <string name="prefs_meters_accuracy_value_text">米精度</string>
     <string name="prefs_open_source_notices_text">开源声明</string>
     <string name="prefs_optical_zoom_text">光学变焦（变焦）/焦距</string>
-    <string name="prefs_orientation_landscape">景观</string>
-    <string name="prefs_orientation_landscape_reversed">专辑反转</string>
-    <string name="prefs_orientation_portrait">肖像</string>
-    <string name="prefs_orientation_sensor_automatic">自动的</string>
+    <string name="prefs_orientation_landscape">横向</string>
+    <string name="prefs_orientation_landscape_reversed">横向反转</string>
+    <string name="prefs_orientation_portrait">纵向</string>
+    <string name="prefs_orientation_sensor_automatic">自动旋转</string>
     <string name="prefs_other_auto_deleting_sum_text">如果新视频没有足够空间，录制时自动删除最旧的视频</string>
     <string name="prefs_other_auto_deleting_text">循环记录</string>
     <string name="prefs_other_backup_records_tip">要备份您的录音，请安装 Google 相册等应用程序。在这些应用程序中找到录制文件夹并为其启用备份选项（单击文本查看示例）。</string>
@@ -238,9 +238,9 @@
     <string name="prefs_other_path_not_set">录音路径未设置，点击此处设置</string>
     <string name="prefs_other_path_photo_text">照片位置（文件夹/路径）</string>
     <string name="prefs_other_path_text">视频位置（文件夹/路径）</string>
-    <string name="prefs_other_private_storage">私人存储</string>
+    <string name="prefs_other_private_storage">私密存储</string>
     <string name="prefs_other_private_storage_desc">录音不会在其他应用中显示，你可以设置 PIN 码来锁定访问权限</string>
-    <string name="prefs_other_private_storage_warning_tip">警告：如果卸载此应用，私人存储空间中的录音将被删除。\n在这种情况下，无法使用外部应用（例如 Google Photos）进行备份，因为其他应用无法访问此应用的私人存储空间。</string>
+    <string name="prefs_other_private_storage_warning_tip">警告：如果卸载此应用，私密存储空间中的录音将被删除。\n在这种情况下，无法使用外部应用（例如 Google Photos）进行备份，因为其他应用无法访问此应用的私密存储空间。</string>
     <string name="prefs_other_remove_pin">删除 PIN 码</string>
     <string name="prefs_other_set_pin">设置PIN码</string>
     <string name="prefs_other_settings_sum_text">存储位置（文件夹）、录像时长、循环录像、最大文件大小、G-sensor、PIN码锁、故障自动重启</string>
@@ -322,7 +322,7 @@
     <string name="prefs_subtitles_date_format_text">日期格式</string>
     <string name="prefs_subtitles_date_text">日期）</string>
     <string name="prefs_subtitles_date_time_system_text">系统性</string>
-    <string name="prefs_subtitles_gps_info_category_subtitle">Эти опции могут существенно потреблять батарею 和 нагревать устройство。 Для видеозаписей главное информация о времени, поэтому все GPS опции вполне можно отключить, включая настройки интер фейca</string>
+    <string name="prefs_subtitles_gps_info_category_subtitle">这些选项会严重消耗电池电量并导致设备发热。对于视频录制来说，最主要的是时间信息，因此所有 GPS 选项（包括界面设置）都可以关闭。</string>
     <string name="prefs_subtitles_gps_info_category_title">GPS导航</string>
     <string name="prefs_subtitles_gpx_delay_title">GPX 最低更新率</string>
     <string name="prefs_subtitles_gpx_no_delay_entry">所有坐标更新</string>
@@ -382,7 +382,7 @@
     <string name="prefs_video_control_scene_mode_night_text">夜间（适用于弱光条件）</string>
     <string name="prefs_video_control_scene_mode_snow_text">雪</string>
     <string name="prefs_video_control_scene_mode_sunset_text">日落</string>
-    <string name="prefs_video_day_night_auto_mode_day_start_time_text">日出时间（Sunrise）</string>
+    <string name="prefs_video_day_night_auto_mode_day_start_time_text">日出时间（日出）</string>
     <string name="prefs_video_day_night_auto_mode_night_start_time_text">日落时间（日落）</string>
     <string name="prefs_video_day_night_mode_text">日间、夜间或自动模式</string>
     <string name="prefs_video_exposure_auto_mode_sum_text">如果要手动控制传感器帧持续时间、曝光时间、灵敏度和光圈，请禁用</string>
@@ -420,7 +420,7 @@
     <string name="prefs_zoom_text">数码变焦（变焦）</string>
     <string name="rec_audio_silence_text">目前无法录音，因为麦克风被另一个应用程序拦截</string>
     <string name="rec_available_space_text">空间剩余</string>
-    <string name="rec_day_night_btn_auto_text">汽车</string>
+    <string name="rec_day_night_btn_auto_text">自动</string>
     <string name="rec_fix_short_text">纠正</string>
     <string name="rec_fix_text">纠正</string>
     <string name="rec_gps_status_satellites_few_text">卫星</string>
@@ -479,8 +479,8 @@
     <string name="subscription_close">关闭</string>
     <string name="subscription_free_trial_explanation">免费试用期结束后将开始计费。在试用期结束前取消即可免费使用。</string>
     <string name="subscription_get_premium">获得高级版</string>
-    <string name="subscription_monthly">每月</string>
-    <string name="subscription_premium">优质的</string>
+    <string name="subscription_monthly">按月订阅</string>
+    <string name="subscription_premium">订阅高级版</string>
     <string name="subscription_remove_ads">移除广告</string>
     <string name="subscription_renew_explanation">您的订阅将每月自动续订，除非在当前订阅期结束前至少 24 小时取消</string>
     <string name="subscription_start_free_trial">开始免费试用</string>
@@ -498,7 +498,7 @@
     <string name="timer_auto_start_service_notification_subtitle_text">自动开始视频录制的定时器服务</string>
     <string name="to">到</string>
     <string name="unknown">未知</string>
-    <string name="videos_ask_which_player">询问哪个球员参加比赛</string>
+    <string name="videos_ask_which_player">哪个视频播放器</string>
     <string name="videos_count_one">视频</string>
     <string name="videos_count_other">视频</string>
     <string name="videos_deleting_text">正在删除文件…请稍候！</string>
